--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     height: fit-content;
     display: grid;
     grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+    pointer-events: none;
 }
 
 .ticTacSquare {
