--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+@font-face {
+    font-family: '8bit';
+    src: url('fonts/VT323-Regular.ttf');
+}
+
 body {
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
+    background-image: url('images/internetwars.jpg');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position-x: 1vmin;
+    margin: 0;
+    padding: 0;
 }
 
 * {
@@ -8,35 +22,136 @@ body {
 }
 
 .container {
-    width: 100vw;
-    height: 100vh;
+    position: absolute;
+    font-family: 'Courier New', Courier, monospace;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-width: 100vw;
+    min-height: 100vh;
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .gameBoard {
+    position: absolute;
+    top: 25vmin;
     width: fit-content;
     height: fit-content;
     display: grid;
     grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
     pointer-events: none;
+    gap: 1vmin;
+    align-content: center;
+    border-radius: 5vmin;
+    box-shadow: 0vmin 0vmin 100vmin 100vmin rgba(0, 0, 0, 0.925);
 }
 
 .ticTacSquare {
+    position: relative;
+    background: rgb(245, 245, 220, 0.5);
+    border-radius: 1vmin;
+    box-shadow: 0vmin 0vmin 1vmin 2.5vmin rgba(0, 0, 0, 0.6), 0 .7vmin gray;
+    backdrop-filter: blur(5.7px);
+    -webkit-backdrop-filter: blur(6.7px);
     height: 10vmin;
     width: 10vmin;
     margin: 0;
     padding: 0;
     font-size: 8vmin;
-    border: 0.25vmin solid black;
+    font-weight: bold;
+    text-align: center;
+    font-weight: bold;
+    border: 0.25vmin solid rgb(139, 69, 19, 0.3);
     text-align: center;
     color: transparent;
 }
 
-button {
+.ticTacSquare:hover {
+    background: rgba(247, 247, 242, 0.1);
+    backdrop-filter: blur(2px);
+    cursor: pointer;
+    box-shadow: 0vmin 0vmin 1vmin 2.5vmin rgba(0, 0, 0, 0.6);
+}
+
+.results {
+    position: relative;
+    top: 10vmin;
+    font-family: '8bit', 'Courier New', Courier, monospace;
+    font-size: 3vmin;
+    color: white;
+}
+
+.xButton,
+.oButton {
+    position: relative;
+    top: 15vmin;
+    font-size: 3vmin;
+    font-weight: bold;
+    text-shadow: 0.15vmin 0.15vmin pink, -0.15vmin -0.15vmin maroon;
+    line-height: 0.75vmin;
+    text-align: center;
+    display: inline-block;
+    width: 10vmin;
+    height: 10vmin;
+	-webkit-border-radius: 5vmin;
+	-moz-border-radius: 5vmin;
+	-o-border-radius: 5vmin;
+	border-radius: 5vmin;
+	background-color: red;
+	-webkit-box-shadow:  0 .5vmin maroon;
+	-moz-box-shadow:  0 .5vmin maroon;
+	-o-box-shadow:  0 .5vmin maroon;
+	box-shadow:  0 .5vmin maroon;
+	color: red;
+	margin: 2vmin;
+	background-color: red;
+	background-image: -o-linear-gradient(left top, pink 3%, red 22%, maroon 99%);
+	background-image: -moz-linear-gradient(left top, pink 3%, red 22%, maroon 99%);
+	background-image: -webkit-linear-gradient(left top, pink 3%, red 22%, maroon 99%);
+	background-image: linear-gradient(left top, pink 3%, red 22%, maroon 99%);
+	cursor: pointer;
+    padding-left: 1vmin;
+}
+
+.pvp,
+.pvc,
+.easy,
+.medium,
+.hard,
+.impossible,
+.reset {
+    position: relative;
+    top: 15vmin;
+    font-family: '8bit', 'Courier New', Courier, monospace;
+    font-size: 3vmin;
+    font-weight: bold;
     width: 30vmin;
+    height: 5vmin;
+    text-align: center;
+    display: inline-block;
+    margin: 2vmin;
+    padding: 1vmin 0 1vmin 1vmin;
+    background-color: lightgray;
+    text-shadow: -0.15vmin -0.15vmin black, 0.15vmin 0.15vmin white;
+    color: gray;
+    -webkit-border-radius: 1vmin;
+	-moz-border-radius: 1vmin;
+	-o-border-radius: 1vmin;
+	border-radius: 1vmin;
+    box-shadow: 0 .7vmin gray; 
+    cursor: pointer;
+}
+
+button:active {
+    box-shadow: none;
+    position: relative;
+    top: 15.2vmin;
 }
 
 .markerSelect {
@@ -45,4 +160,9 @@ button {
 
 .difficultySelect {
     display: none;
+}
+
+.reset {
+    position: absolute;
+    top: 75vmin
 }
